--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
     "start": "cd server && node server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.3",
     "jest": "^29.6.2",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "nodemon": "^3.0.1",
     "pg": "^8.11.0",
-    "supertest": "^6.3.3"
-    },
+    "supertest": "^6.3.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.23.8"
+  },
   "devDependencies": {
     "concurrently": "^8.2.0"
   }
