Adding RLS to Projects, Users, Tasks, Organizations tables

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-PGUSER=root
+PGUSER=subscript_user
 PGHOST=localhost
-PGPASSWORD=
+PGPASSWORD=aintnorest4thewicked
 PGDATABASE=subscript
 PGPORT=5432
 PORT=5001
