--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "cd server && nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "test": "cd server && jest",
-    "test:watch": "cd server && jest --watch",
+    "test:watch": "cd server && jest --watch --coverage",
     "start": "cd server && node server.js"
   },
   "dependencies": {
